# vkcloud-client

./: .gitignore  .gitmodules  CMakeLists.txt  bubbleframe.cpp  chatdialog.cpp  chatdialog.h  chatdialog.ui  chatitembase.cpp  chatitembase.h  chatpage.cpp  chatpage.h  chatpage.ui  chatuseritem.cpp  chatuseritem.h  chatuseritem.ui  chatuserlist.cpp  chatuserlist.h  chatview.cpp  chatview.h  config.ini.example  configurationmanager.cpp  configurationmanager.h  databasemanager.cpp  databasemanager.h  global.cpp  global.h  httpmanager.cpp  httpmanager.h  listitembase.cpp  listitembase.h  loadingdialog.cpp  loadingdialog.ui  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registerdialog.cpp  (+16 more)
cmake/: spdlog.cmake
style/: stylesheet.qss
